Validaciones y exceptiones en services